--- a/src/main/res/layout/main.xml
+++ b/src/main/res/layout/main.xml
@@ -20,6 +20,11 @@ android:text="@string/start_button2"
 android:id="@+id/start_button2"
 android:layout_width="wrap_content"
 android:layout_height="wrap_content" />
+<Button 
+android:text="@string/start_button3" 
+android:id="@+id/start_button3"
+android:layout_width="wrap_content"
+android:layout_height="wrap_content" />
 
 </LinearLayout>
 
